--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 
                 <p class="and">"Front-end developer and avid reader."</p>
 
-                <a href="#" class="link">GitHub</a>
+                <a href="https://github.com/jamiuTheDev" class="link">GitHub</a>
 
-                <a href="#" class="link">Frontend Mentor</a>
+                <a href="https://www.frontendmentor.io/profile/jamiuTheDev" class="link">Frontend Mentor</a>
 
-                <a href="#" class="link">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/muhammad-jamiu-2b8318319/" class="link">LinkedIn</a>
 
-                <a href="#" class="link">Twitter</a>
+                <a href="https://x.com/Muhammad1026841" class="link">Twitter</a>
 
-                <a href="#" class="link">Instagram</a>
+                <a href="https://www.instagram.com/_ayomidejamiu/" class="link">Instagram</a>
             </div>
 
             <p class="attribution">
