new picture,new pages

--- a/index.html
+++ b/index.html
@@ -11,29 +11,30 @@
 </head>
 
 <body>
+
             <div class="king">
-                <img src="./img/avatar-jessica.jpeg" alt="Muhammad Jamiu">
+                <img src="./img/IMG-20220614-WA0005 (2).jpg" alt="Muhammad Jamiu">
 
-                <h1 class="ica">Jessica Randall</h1>
+                <h1 class="ica">Muhammad Jamiu</h1>
                 
-                <p class="don">London, United Kingdom</p>
+                <p class="don">Abuja, Nigeria</p>
 
-                <p class="and">"Front-end developer and avid reader."</p>
+                <p class="and">"Front-end developer."</p>
 
-                <a href="https://github.com/jamiuTheDev" class="link">GitHub</a>
+                <a href="https://github.com/jamiuTheDev" target="_blank" class="link">GitHub</a>
 
-                <a href="https://www.frontendmentor.io/profile/jamiuTheDev" class="link">Frontend Mentor</a>
+                <a href="https://www.frontendmentor.io/profile/jamiuTheDev" target="_blank" class="link">Frontend Mentor</a>
 
-                <a href="https://www.linkedin.com/in/muhammad-jamiu-2b8318319/" class="link">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/muhammad-jamiu-2b8318319/" target="_blank" class="link">LinkedIn</a>
 
-                <a href="https://x.com/Muhammad1026841" class="link">Twitter</a>
+                <a href="https://x.com/Muhammad1026841" target="_blank" class="link">X</a>
 
-                <a href="https://www.instagram.com/_ayomidejamiu/" class="link">Instagram</a>
+                <a href="https://www.instagram.com/_ayomidejamiu/" target="_blank" class="link">Instagram</a>
             </div>
 
             <p class="attribution">
-                Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-                Coded by <a href="#">Muhammad Jamiu</a>.
+                Challenge by <a  href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="chal">Frontend Mentor</a>. 
+                Coded by <a href="#" class="chal">Muhammad Jamiu</a>.
             </p>
 
 </body>
